@@ -1,12 +1,3 @@
-sinclude(../config/acx.m4)
-sinclude(../config/gettext-sister.m4)
-sinclude(../config/nls.m4)
-sinclude(../config/po.m4)
-sinclude(../config/progtest.m4)
-sinclude(../config/stdint.m4)
-sinclude(../bfd/bfd.m4)
-sinclude(../bfd/warning.m4)
-
 dnl See whether we need to use fopen-bin.h rather than fopen-same.h.
 AC_DEFUN([BFD_BINARY_FOPEN],
 [AC_REQUIRE([AC_CANONICAL_TARGET])
@@ -49,16 +40,6 @@ else
   test x"${bfd_cv_build_exeext}" != xno && EXEEXT_FOR_BUILD=${bfd_cv_build_exeext}
 fi
 AC_SUBST(EXEEXT_FOR_BUILD)])dnl
-
-sinclude(../libtool.m4)
-dnl The lines below arrange for aclocal not to bring libtool.m4
-dnl AM_PROG_LIBTOOL into aclocal.m4, while still arranging for automake
-dnl to add a definition of LIBTOOL to Makefile.in.
-ifelse(yes,no,[
-AC_DEFUN([AM_PROG_LIBTOOL],)
-AC_DEFUN([AM_DISABLE_SHARED],)
-AC_SUBST(LIBTOOL)
-])
 
 AC_DEFUN([AM_INSTALL_LIBBFD],
 [AC_MSG_CHECKING([whether to install libbfd])
